finish eslint cleanup

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,12 @@
         ],
         "react/prop-types": [
             0
+        ],
+        "no-case-declarations": [
+            0
+        ],
+        "no-undef": [
+            0
         ]
     }
 }
